; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/PicoDrive/platform/libpicofe/extr_input.c_in_menu_wait_any.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/PicoDrive/platform/libpicofe/extr_input.c_in_menu_wait_any.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@menu_key_state = common dso_local global i32 0, align 4
@menu_last_used_dev = common dso_local global i32 0, align 4
@PBTN_CHAR = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @in_menu_wait_any(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %10 = load i32, i32* @menu_key_state, align 4
  store i32 %10, i32* %5, align 4
  br label %11

11:                                               ; preds = %2, %24
  store i32 0, i32* %8, align 4
  store i32 0, i32* %9, align 4
  %12 = load i8*, i8** %3, align 8
  %13 = load i32, i32* %4, align 4
  %14 = call i32 @in_update_keycode(i32* %9, i32* %8, i8* %12, i32 %13)
  store i32 %14, i32* %7, align 4
  %15 = load i32, i32* %7, align 4
  %16 = icmp slt i32 %15, 0
  br i1 %16, label %17, label %18

17:                                               ; preds = %11
  br label %25

18:                                               ; preds = %11
  %19 = load i32, i32* %5, align 4
  %20 = load i32, i32* @menu_key_state, align 4
  %21 = icmp ne i32 %19, %20
  br i1 %21, label %22, label %24

22:                                               ; preds = %18
  %23 = load i32, i32* %9, align 4
  store i32 %23, i32* @menu_last_used_dev, align 4
  br label %25

24:                                               ; preds = %18
  br label %11

25:                                               ; preds = %22, %17
  %26 = load i32, i32* @menu_key_state, align 4
  store i32 %26, i32* %6, align 4
  %27 = load i32, i32* @PBTN_CHAR, align 4
  %28 = xor i32 %27, -1
  %29 = load i32, i32* @menu_key_state, align 4
  %30 = and i32 %29, %28
  store i32 %30, i32* @menu_key_state, align 4
  %31 = load i32, i32* %6, align 4
  ret i32 %31
}

declare dso_local i32 @in_update_keycode(i32*, i32*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
